@@ -67,6 +67,7 @@ message_loaded_preset_addons_plural=[img=milestones_main_icon_white] Also added 
 message_reloaded_presets_singular=[img=milestones_main_icon_white] [font=default-large-bold]Milestones[/font] found a new preset: [color=green]__1__[/color]. Go to settings to use it (__CONTROL__milestones_toggle_gui__).
 message_reloaded_presets_plural=[img=milestones_main_icon_white] [font=default-large-bold]Milestones[/font] found new presets: [color=green]__1__[/color]. Go to settings to use one (__CONTROL__milestones_toggle_gui__).
 message_settings_changed=[img=milestones_main_icon_white] [font=default-large-bold]Milestones[/font] settings changed! Completion times were backfilled as best as possible.
+message_settings_changed_multiplayer=[img=milestones_main_icon_white] [font=default-large-bold]Milestones[/font] settings changed by __1__! Completion times were backfilled as best as possible.
 message_milestone_reached_item_first=[img=milestones_main_icon_white] [font=default-large-bold]Created the first [color=green][img=__1__]__2__[/color] at [color=green]__3__[img=quantity-time][/color]![/font]
 message_milestone_reached_item_more=[img=milestones_main_icon_white] [font=default-large-bold]Created [color=green]__1__ [img=__2__]__3__[/color] at [color=green]__4__[img=quantity-time][/color]![/font]
 message_milestone_reached_kill_first=[img=milestones_main_icon_white] [font=default-large-bold]Killed the first [color=green][img=__1__]__2__[/color] at [color=green]__3__[img=quantity-time][/color]![/font]
